# emmet

emmet-api/emmet/api/core/: api.py  settings.py
emmet-api/requirements/: ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
emmet-archival/requirements/: ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt
emmet-builders/: setup.py
emmet-builders/dev_scripts/: get_matminer_datasets.py
emmet-builders/emmet/builders/: settings.py  utils.py
emmet-builders/emmet/builders/abinit/: phonon.py  sound_velocity.py
emmet-builders/emmet/builders/materials/: absorption_spectrum.py  alloys.py  basic_descriptors.py  chemenv.py  dielectric.py  (+13 more)
emmet-builders/requirements/: ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
emmet-builders/tests/: test_materials.py  test_utils.py  test_vasp.py
emmet-cli/emmet/cli/: calc.py
emmet-cli/requirements/: ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt
emmet-core/emmet/core/: _general_store.py  _messages.py  _user_settings.py  absorption.py  alloys.py  bonds.py  charge_density.py  chemenv.py  corrected_entries.py  defect.py  elasticity.py  elasticity_legacy.py  electrode.py  electronic_structure.py  eos.py  fermi.py  grain_boundary.py  lobster.py  magnetism.py  material.py  material_property.py  math.py  ml.py  molecules_jcesr.py  oxidation_states.py  phonon.py  polar.py  provenance.py  qc_tasks.py  settings.py  similarity.py  spectrum.py  structure.py  structure_group.py  stubs.py  summary.py  surface_properties.py  symmetry.py  tasks.py  thermo.py  (+4 more)
emmet-core/requirements/: ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
emmet-core/tests/: test_elasticity.py  test_provenance.py  test_task.py
emmet-core/tests/mobility/: test_migrationgraph.py
emmet-xtal/: pyproject.toml
emmet-xtal/emmet/xtal/: atom.py  base.py  core.py  typing.py
emmet-xtal/emmet/xtal/analysis/: similarity.py  trajectory.py
emmet-xtal/emmet/xtal/io/: xyz.py
emmet-xtal/tests/: conftest.py
(+57 files in other folders)
